bnf.txt
<program> ::= <statement_list>

<statement_list> ::= <statement> | <statement> <statement_list>

<statement> ::= <assignment> | <if_statement> | <while_statement> | <print_statement>

<assignment> ::= <identifier> "=" <expression> ";"

<if_statement> ::= "if" "(" <condition> ")" "{" <statement_list> "}"

<while_statement> ::= "while" "(" <condition> ")" "{" <statement_list> "}"

<print_statement> ::= "print" "(" <expression> ")" ";"

<condition> ::= <expression> | <expression> <relop> <expression>

<relop> ::= "==" | "<" | ">"

<expression> ::= <term> | <term> "+" <expression> | <term> "-" <expression> | <string>

<term> ::= <factor> | <factor> "*" <term> | <factor> "/" <term>

<factor> ::= <number> | <identifier> | <string> | "(" <expression> ")"

<string> ::= "\"" <string_content> "\""

<string_content> ::= <letter> | <digit> | <symbol> | <whitespace> | <string_content> <letter> | <string_content> <digit> | <string_content> <symbol> | <string_content> <whitespace>

<identifier> ::= <letter> <identifier_tail>*

<identifier_tail> ::= <letter> | <digit>

<number> ::= <digit> <number_tail>*

<number_tail> ::= <digit>

<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"

<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<symbol> ::= "!" | "@" | "#" | "$" | "%" | "^" | "&" | "*" | "(" | ")" | "-" | "_" | "=" | "+" | "{" | "}" | "[" | "]" | "|" | "\\" | ":" | ";" | "'" | "<" | ">" | "," | "." | "?" | "/"

<whitespace> ::= " " | "\t" | "\n"
